--- a/header/header.css
+++ b/header/header.css
@@ -8,16 +8,33 @@
    color: white;
    background-color: transparent;
 }
-.logo,
-.logo:visited {
+@media screen and (min-width: 769px) {
+   .header {
+      padding: 45px;
+   }
+}
+header > .logo,
+header > .logo:visited,
+.nav__link {
    color: inherit;
    text-decoration: none;
 }
-.logo__text {
+header > .logo > .logo__text {
    margin: 0;
    font-family: "Orbitron";
    font-weight: 500;
    font-size: 2rem;
+}
+@media screen and (min-width: 769px) {
+   header > .logo > .logo__text {
+      font-size: 3rem;
+   }
+}
+header > .logo > .logo__text--big {
+   margin: 0;
+   font-family: "Orbitron";
+   font-weight: 500;
+   font-size: 3rem;
 }
 .burguer {
    height: 2rem;
@@ -26,9 +43,58 @@
    flex-direction: column;
    justify-content: space-evenly;
 }
+@media screen and (min-width: 769px) {
+   .burguer {
+      display: none;
+   }
+}
 .burguer__slice {
    background-color: white;
    height: 17%;
    width: 100%;
    border-radius: 10px;
+}
+.nav {
+   background-color: #161616;
+   padding: 15px 20px;
+   position: absolute;
+   top: 0px;
+   right: 0px;
+   left: 20px;
+   bottom: 25%;
+   text-align: right;
+   display: none;
+}
+@media screen and (min-width: 769px) {
+   .nav {
+      background-color: transparent;
+      padding: 0px;
+      position: inherit;
+      text-align: inherit;
+      display: flex;
+   }
+   .nav__x {
+      display: none;
+   }
+}
+.nav__links-container {
+   display: flex;
+   height: 80%;
+   flex-direction: column;
+   text-align: center;
+   justify-content: space-evenly;
+}
+@media screen and (min-width: 769px) {
+   .nav__links-container {
+      /* width: 100px; */
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+   }
+   .nav__link {
+      margin: 0 50px;
+      font-family: "Poppins";
+      font-weight: 400;
+      font-size: 1.5rem;
+   }
 }
