--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,17 +1,17 @@
 .footer {
-   height: 50vh;
+   min-height: 30vh;
    background-color: #2c2c2c;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
+   padding: 5%;
 }
 @media screen and (min-width: 769px) {
    .footer {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      padding: 5%;
    }
 }
 .footer > .logo,
