--- a/index.css
+++ b/index.css
@@ -43,12 +43,15 @@ body {
    min-height: 90vh;
    background-color: #141414;
    color: #fafafa;
-   padding: 20px;
+   padding: 70px 20px;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
 }
 .contact__title {
    text-align: center;
    font-family: "Montserrat";
    font-weight: 700;
    font-size: 32px;
-   margin: 35px 0;
+   margin: 0 0 35px 0;
 }
