--- a/components/welcome.css
+++ b/components/welcome.css
@@ -1,6 +1,6 @@
 .welcome {
    display: grid;
-   grid-template-rows: 13% 1fr;
+   grid-template-rows: minmax(90px, 13%) 1fr;
    background-color: black;
    background-image: url(https://media-exp1.licdn.com/dms/image/C4D1BAQFWEpYdauBLAA/company-background_10000/0/1530552056983?e=2159024400&v=beta&t=_1b58d0OIs4XsZ5No_CzS2e90OmY3Dr0mOKw9dw-smY);
    background-position: top center;
