--- a/components/welcome--minimal.css
+++ b/components/welcome--minimal.css
@@ -1,7 +1,7 @@
 .welcome--minimal {
    display: grid;
    grid-template-rows: minmax(90px, 13%) 1fr;
-   height: 50vh;
+   height: 200px;
 }
 
 .welcome--minimal__titles-container {
