All pages are mobile and desktop ready. Working prototype 1.0

--- a/components/job.css
+++ b/components/job.css
@@ -3,6 +3,11 @@
    color: white;
    margin-bottom: 55px;
 }
+@media (min-width: 950px) {
+   .job {
+      max-width: 300px;
+   }
+}
 .job__image {
    margin: 0 auto;
    max-height: 180px;
